samples/_failures_safe/1761616014_7f464b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db51e5f9.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_db51e5f9.c:162:5: error: expected declaration or statement at end of input
  162 |     return left;
      |     ^~~~~~
